GreatRiverWeb/src/pages/services.css
.wrapper {
    display: flex;
    height: 10rem;
    width: 100vw;
    justify-content: center;
    align-items: center;
    padding: 5rem 6rem 60vh;
}

.accordion {
    width: 700px;
    height: 100px;
}

.item {
    background: rgb(197, 197, 197);
    margin-bottom: 5px;
    padding: 10px 20px;
    border-radius: 10px;
}

.title {
    color: #85662b;
    display: flex;
    justify-content: space-between;
    align-items: center;
    cursor: pointer
}

.content {
    color: rgb(133, 133, 133);
    max-height: 0;
    overflow: hidden;
    transition: all 0.5s cubic-bezier(0, 1, 0, 1);
}

.content.show {
    height: auto;
    max-height: 9999px;
    transition: all 0.5s cubic-bezier(1, 0, 1, 0);
}

serv {
    font-family: Georgia, serif;
    color: rgb(52 52 178);
    font-size: xx-large;
}

.topspace {
    margin-top: 10%;
    color: white;
    text-align: center;
    padding: 30px 10px;
    border-radius: 10px;
}

.serviceExamples {
    text-align: center;
    justify-content: center;
    align-items: center;
    margin: auto;
}

@media only screen and (max-width: 767px) {
    .topspace {
        margin-top: 30%;
    }
}

